small changes to scripts and folders

--- a/folder/example/model_update/4_update_generic_model_with_mri_data.ipynb
+++ b/folder/example/model_update/4_update_generic_model_with_mri_data.ipynb
@@ -632,18 +632,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this code moves the bones from the TPS folder to the bones folder\n",
+    "import shutil\n",
     "\n",
     "for file in os.listdir(tps_folder):\n",
     "    if file.endswith('.stl'):\n",
     "        old_path = os.path.join(tps_folder, file)\n",
     "        new_path = os.path.join(bones_folder, file)\n",
     "        print(old_path, new_path)\n",
-    "        os.rename(old_path, new_path)"
+    "        shutil.copy(old_path, new_path)"
    ]
   },
   {
