--- a/folder/example/mri/control/control.ipynb
+++ b/folder/example/mri/control/control.ipynb
@@ -179,11 +179,11 @@
     "<li> bflh P1 on right and left. It often falls inside the bone.\n",
     "<li> glmax3 P3 right and left. This point typically falls onto the adductor (maybe a feature of the Rajagopal 2016 model).\n",
     "<li> glmax3 P4 right and left. This point can also fall onto the adductors space.\n",
+    "<li> tfl P2 is often in the wrong place </li>\n",
     "<li> sartorius P2 right and left. This point is also often too anterior in the Rajagopal 2016 template.Please note that sartorius P3 and P4 are also frequently placed incorrectly. Adjust them if needed.\n",
     "<li> check that rectus and vastii points are on the outer perimeter of the patella</li>\n",
     "<li> check that origins of the gastrocnemius muscles as high and as anteriorly as possible </li>\n",
     "<li> check that rectus and vastii patella tendon insertions (P5s) are not outsde of the body. Changing the position of just one of these points, for example vaslat P5 should make all the rest fall into place in the next step. </li>\n",
-    "<li> check the origin of soleus: soleus_r-P1 and soleus_l-P1. In Rajagopal 2016 this muscle originates from the tibia. </li>\n",
     "<li> tibanter_r-P3 and tibanter_l-P3</li>\n",
     "<li> perlon P3 right and left </li>\n",
     "\n",
