--- a/folder/worked_example/model_update/2.0_use_mri_data.ipynb
+++ b/folder/worked_example/model_update/2.0_use_mri_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "'c:\\\\Users\\\\User\\\\OneDrive\\\\Documents\\\\WORK\\\\JRF_GaitAnalysis\\\\modelling_paper\\\\repo\\\\folder\\\\worked_example\\\\model_update'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b34e55fa01f481482ee0822a7f2d40e",
+       "model_id": "92ab688782184e5eb81516285ec0ecb4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20812601410_14&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x2998bda11d0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,18 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3001feecc0b244b29532a2192fae2ec1",
+       "model_id": "07a55a35161b464cbf70dc59d2019bbf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x208125fe290_15&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x29991cdb590_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -312,18 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68854e2e03114e89b7ba27c020439f57",
+       "model_id": "b7f2caa1120b4d3ba7802dd0644e9a74",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20811373810_16&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299d89b0fd0_2&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,18 +409,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae4d772547ec4440b0e3d7999de2ceb3",
+       "model_id": "ccc287a556b547bfa10dd8a1e1550393",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x208500088d0_17&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299d8a55e90_3&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -451,18 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fee1df595664ae0b69ca14fd136e2db",
+       "model_id": "8958a186dfdd4a268ca1705724afc87f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x208113779d0_18&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299d8e40a10_4&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,18 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec3c2600f37c4d0998e556a4bd21df4b",
+       "model_id": "7871cb6af1604fc1b7e455272790d830",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x209074f9fd0_19&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299e465ec50_5&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -576,18 +576,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97efdcde585747f38c72deeb868d655a",
+       "model_id": "1b302f4f19b847d39929fb2679f0bd6e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20811376e50_20&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299d89b1210_6&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,18 +651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the determinant is less than zero, recalculate r\n",
-      "the determinant is less than zero, recalculate r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create rotations to child\n",
     "bone_markers = list(mri_dict['femur_l'].index)\n",
@@ -682,18 +673,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "697618777aef45e990b33986f8155447",
+       "model_id": "d6d50ddb24e84b3c8833268fe9208e05",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20907593150_21&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299866b3cd0_7&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -725,18 +716,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c178ba9d0bb24087a5a324c071233b81",
+       "model_id": "5493d75038364bca93d9e165847e4be0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x2085015c950_22&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x29a09638d90_8&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -773,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,18 +780,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd07b8e9987448059acc64b69e383421",
+       "model_id": "de15841538df43098a691da3e8e4740e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20864da7050_23&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x299866b2dd0_9&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -838,18 +829,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e13fb320f455462b9a1c0515a34e5d3e",
+       "model_id": "46d95fc007c645fe93f9c1ae73240784",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x20931ce6310_24&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x29a15171b50_10&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -892,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -947,18 +938,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fd1ce31021a46d5860d9a52bacfa1d8",
+       "model_id": "8d4c9555ad8e45d19d275442f3daeabe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x2084fed43d0_25&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x29a096b11d0_11&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -992,18 +983,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fed648d5515499e9e735a92fed1bd25",
+       "model_id": "26f4cb9211b74a48bee79d7e395a3dab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x2093d70b2d0_26&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x29a2c276f10_12&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1046,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,18 +1081,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4baddb1eed5a4f6ea390b2adf7a2a178",
+       "model_id": "0d4578ead1c145a4b27172243df1fb8e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51900/index.html?ui=P_0x209532f3190_27&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x29a41ec29d0_13&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
