optimisation update, emg extraction update

--- a/folder/example/model_update/1_extract_static_C3D.ipynb
+++ b/folder/example/model_update/1_extract_static_C3D.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +80,28 @@
     "        \"\"\"Process and export EMG data.\"\"\"\n",
     "        time = analog_task.getIndependentColumn()\n",
     "        columns = analog_task.getColumnLabels()\n",
-    "        emg_columns = [col[len('EMG Channels.'):] for col in columns if 'EMG' in col]\n",
-    "        emg_col_nums = [i for i, col in enumerate(columns) if 'EMG' in col]\n",
-    "        emg_data = analog_task.getMatrixBlock(0, emg_col_nums[0], len(time), len(emg_col_nums))\n",
-    "        emg_sto = create_opensim_storage(time, emg_data, emg_columns)\n",
-    "        emg_sto.setName('EMG')\n",
-    "        emg_sto.printResult(emg_sto, 'task_emg', output_dir, 0.01, '.mot')\n",
+    "        #print(columns)\n",
+    "        emg_columns = []\n",
+    "        emg_col_nums = []\n",
+    "        for i, col in enumerate(columns):\n",
+    "            #if 'Force' not in col and 'Moment' not in col:\n",
+    "            if 'EMG' in col:\n",
+    "                emg_columns.append(col[len('EMG Channels.'):])\n",
+    "                emg_col_nums.append(i)\n",
+    "        #emg_columns = [col[len('EMG Channels.'):] for col in columns if 'EMG' in col]\n",
+    "        #emg_col_nums = [i for i, col in enumerate(columns) if 'EMG' in col]\n",
+    "        if len(emg_columns) > 0:\n",
+    "            try:\n",
+    "                emg_data = analog_task.getMatrixBlock(0, emg_col_nums[0], len(time), len(emg_col_nums))\n",
+    "                emg_sto = create_opensim_storage(time, emg_data, emg_columns)\n",
+    "                emg_sto.setName('EMG')\n",
+    "                emg_sto.printResult(emg_sto, 'task_emg', output_dir, 0.01, '.mot')\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing EMG data: {str(e)}\")\n",
+    "                print(f\"Failed to export EMG data for columns: {emg_columns}\")\n",
+    "        else:\n",
+    "            print(\"No EMG columns found in the data\")\n",
+    "                \n",
     "\n",
     "    def _process_forces(self, forces_task):\n",
     "        \"\"\"Process and refine force data.\"\"\"\n",
@@ -122,7 +138,10 @@
     "        plot_sto_file(os.path.join(output_dir, 'task.trc'), os.path.join(output_dir, 'task.pdf'), 3)\n",
     "        plot_sto_file(os.path.join(output_dir, 'task_grf.mot'), os.path.join(output_dir, 'task_grf.pdf'), 3)\n",
     "        if self.import_emg:\n",
-    "            plot_sto_file(os.path.join(output_dir, 'task_emg.mot'), os.path.join(output_dir, 'task_emg.pdf'), 3)\n",
+    "            try:\n",
+    "                plot_sto_file(os.path.join(output_dir, 'task_emg.mot'), os.path.join(output_dir, 'task_emg.pdf'), 3)\n",
+    "            except Exception  as e:\n",
+    "                print(f\"Error plotting EMG data: {str(e)}\")\n",
     "\n",
     "    def apply(self):\n",
     "        \"\"\"Process each folder.\"\"\"\n",
