reduced regularisation of the TPS functions, added error control

--- a/folder/example/mri/results/orientation_with_tps.ipynb
+++ b/folder/example/mri/results/orientation_with_tps.ipynb
@@ -782,48 +782,11 @@
    "source": [
     "reference_for_warping_node = slicer.util.getNode('lms')\n",
     "reference_for_warping_locations = slicer.util.arrayFromMarkupsControlPoints(reference_for_warping_node)\n",
-    "reference_for_warping_names = [reference_for_warping_node.GetNthControlPointLabel(i) for i in range(reference_for_warping_node.GetNumberOfControlPoints())]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "4655f143",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template_for_warpintg_locations = template_markers_df.loc[reference_for_warping_names].to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "6b5fdbde",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tps.thin_plate_spline.ThinPlateSpline at 0x25ec0630fd0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tps_spline = ThinPlateSpline(alpha = 0.002)\n",
-    "tps_spline.fit(template_for_warpintg_locations, reference_for_warping_locations)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "b7ae50df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "reference_for_warping_names = [reference_for_warping_node.GetNthControlPointLabel(i) for i in range(reference_for_warping_node.GetNumberOfControlPoints())]\n",
+    "template_for_warpintg_locations = template_markers_df.loc[reference_for_warping_names].to_numpy()\n",
+    "\n",
+    "tps_spline = ThinPlateSpline(alpha = 0.001)\n",
+    "tps_spline.fit(template_for_warpintg_locations, reference_for_warping_locations)\n",
     "# this sell introduces an order to landmarks which is different from the order in the OpenSim model\n",
     "# it is done for easy access to relevant points as they come up in the protocol\n",
     "\n",
@@ -862,31 +825,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "17ecd70d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_markers_reordered_df = template_markers_df.loc[order.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "9d01a1b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "second_set = tps_spline.transform(template_markers_reordered_df.to_numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "240ce8a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "template_markers_reordered_df = template_markers_df.loc[order.index]\n",
+    "second_set = tps_spline.transform(template_markers_reordered_df.to_numpy())\n",
+    "\n",
     "lms_cloud = slicer.mrmlScene.AddNewNodeByClass(\"vtkMRMLMarkupsFiducialNode\")\n",
     "lms_cloud.SetName('orientation')\n",
     "slicer.util.updateMarkupsControlPointsFromArray(lms_cloud, second_set)\n",
@@ -953,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "9e3db2f3",
    "metadata": {},
    "outputs": [],
@@ -1035,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "88b1c532",
    "metadata": {},
    "outputs": [],
@@ -1059,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "17b3b71f",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "3f03c26f",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "02b9cc78",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "be25b5d1",
    "metadata": {},
    "outputs": [],
@@ -1308,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "id": "600c75a9",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "95ce1f26",
    "metadata": {},
    "outputs": [],
@@ -1345,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "db2234aa",
    "metadata": {},
    "outputs": [],
@@ -1387,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "50c91658",
    "metadata": {},
    "outputs": [],
@@ -1433,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "id": "744c0473",
    "metadata": {},
    "outputs": [],
@@ -2273,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "f792a06c",
    "metadata": {},
    "outputs": [],
@@ -2297,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "0d0f1024",
    "metadata": {},
    "outputs": [],
@@ -2319,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "0c1611c8",
    "metadata": {},
    "outputs": [],
@@ -2355,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "20b829f0",
    "metadata": {},
    "outputs": [],
@@ -2401,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "49785a7b",
    "metadata": {},
    "outputs": [],
