--- a/folder/worked_example/mri/results/orientation_with_tps.ipynb
+++ b/folder/worked_example/mri/results/orientation_with_tps.ipynb
@@ -782,48 +782,11 @@
    "source": [
     "reference_for_warping_node = slicer.util.getNode('lms')\n",
     "reference_for_warping_locations = slicer.util.arrayFromMarkupsControlPoints(reference_for_warping_node)\n",
-    "reference_for_warping_names = [reference_for_warping_node.GetNthControlPointLabel(i) for i in range(reference_for_warping_node.GetNumberOfControlPoints())]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "4655f143",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template_for_warpintg_locations = template_markers_df.loc[reference_for_warping_names].to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "6b5fdbde",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tps.thin_plate_spline.ThinPlateSpline at 0x25ec0630fd0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tps_spline = ThinPlateSpline(alpha = 0.002)\n",
-    "tps_spline.fit(template_for_warpintg_locations, reference_for_warping_locations)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "b7ae50df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "reference_for_warping_names = [reference_for_warping_node.GetNthControlPointLabel(i) for i in range(reference_for_warping_node.GetNumberOfControlPoints())]\n",
+    "template_for_warpintg_locations = template_markers_df.loc[reference_for_warping_names].to_numpy()\n",
+    "\n",
+    "tps_spline = ThinPlateSpline(alpha = 0.001)\n",
+    "tps_spline.fit(template_for_warpintg_locations, reference_for_warping_locations)\n",
     "# this sell introduces an order to landmarks which is different from the order in the OpenSim model\n",
     "# it is done for easy access to relevant points as they come up in the protocol\n",
     "\n",
@@ -862,31 +825,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "17ecd70d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_markers_reordered_df = template_markers_df.loc[order.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "9d01a1b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "second_set = tps_spline.transform(template_markers_reordered_df.to_numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "240ce8a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "template_markers_reordered_df = template_markers_df.loc[order.index]\n",
+    "second_set = tps_spline.transform(template_markers_reordered_df.to_numpy())\n",
+    "\n",
     "lms_cloud = slicer.mrmlScene.AddNewNodeByClass(\"vtkMRMLMarkupsFiducialNode\")\n",
     "lms_cloud.SetName('orientation')\n",
     "slicer.util.updateMarkupsControlPointsFromArray(lms_cloud, second_set)\n",
