--- a/folder/worked_example/model_update/2.0_use_mri_data.ipynb
+++ b/folder/worked_example/model_update/2.0_use_mri_data.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,18 +144,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 6 largest errorvalues:\n",
+      "1. Index 12: sacroiliac_r = 2.59 mm\n",
+      "2. Index 0: torso_origin_in_pelvis = 2.56 mm\n",
+      "3. Index 11: sacroiliac_l = 2.48 mm\n",
+      "4. Index 3: PSIS_l = 1.77 mm\n",
+      "5. Index 4: PSIS_r = 1.76 mm\n",
+      "6. Index 5: pub_infer_c = 1.46 mm\n",
+      "Average Error: 0.954282 mm\n",
+      "The following point errors can be ignored: ['sacroiliac_r', 'sacroiliac_l']\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92ab688782184e5eb81516285ec0ecb4",
+       "model_id": "65f9d3c623834ffa9628fa14e1cf7bd9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:55921/index.html?ui=P_0x2998bda11d0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:59146/index.html?ui=P_0x2b0236cd890_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -224,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +263,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the determinant is less than zero, recalculate r\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f249a4463ced474fa4bcf19c4db2bfc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:59146/index.html?ui=P_0x2b0267d0e90_1&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# rotate results to child frame\n",
     "bone_markers = list(mri_dict['pelvis'].index)\n",
