--- a/folder/worked_example/model_update/2.1_after_controlling_mri_data.ipynb
+++ b/folder/worked_example/model_update/2.1_after_controlling_mri_data.ipynb
@@ -48,7 +48,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\OneDrive\\Documents\\WORK\\JRF_GaitAnalysis\\modelling_paper\\repo\\folder\\worked_example\\mri\\control\n"
+     ]
+    }
+   ],
    "source": [
     "# set output path -- this file will save results after the MRI adjustments of muscles\n",
     "output_path = os.path.join(root_dir, 'final_results')\n",
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +147,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 6 largest errorvalues:\n",
+      "1. Index 12: sacroiliac_r = 2.59 mm\n",
+      "2. Index 0: torso_origin_in_pelvis = 2.56 mm\n",
+      "3. Index 11: sacroiliac_l = 2.48 mm\n",
+      "4. Index 3: PSIS_l = 1.77 mm\n",
+      "5. Index 4: PSIS_r = 1.76 mm\n",
+      "6. Index 5: pub_infer_c = 1.46 mm\n",
+      "Average Error: 0.954282 mm\n",
+      "The following point errors can be ignored: ['sacroiliac_r', 'sacroiliac_l']\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b49b37a105cb4afa95cfd2c64ae9a42e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:63624/index.html?ui=P_0x142ebd4d7d0_0&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# exclude markers to control for the quality of the spline\n",
     "exclude = ['sacroiliac_r', 'sacroiliac_l']#,'5th_sacr_v'\n",
@@ -204,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,9 +271,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the determinant is less than zero, recalculate r\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34ae77f42e5a4a36a7cfb5117169536e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:63624/index.html?ui=P_0x142eec03410_1&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# rotate results to child frame\n",
     "bone_markers = list(mri_dict['pelvis'].index)\n",
@@ -272,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
