removed a bug where landmarks were named incorrectly during creation of the bone set

--- a/folder/example/mri/results/orientation_with_tps.ipynb
+++ b/folder/example/mri/results/orientation_with_tps.ipynb
@@ -835,8 +835,9 @@
     "\n",
     "lms_cloud = slicer.mrmlScene.AddNewNodeByClass(\"vtkMRMLMarkupsFiducialNode\")\n",
     "lms_cloud.SetName('orientation')\n",
+    "\n",
     "slicer.util.updateMarkupsControlPointsFromArray(lms_cloud, second_set)\n",
-    "for i, name in enumerate(template_markers_df.index):\n",
+    "for i, name in enumerate(template_markers_reordered_df.index):\n",
     "    lms_cloud.SetNthFiducialLabel(i, name)"
    ]
   },
